<resources>
    <string name="app_name">萌动漫</string>
    <!--漫画推荐-->
    <string name="cartoon_recommend">精彩推荐</string>
    <string name="cartoon_serial">热门连载</string>
    <string name="cartoon_original">原创漫画</string>
    <string name="cartoon_lately">最近更新</string>

    <!--更多-->
    <string name="more_more">更多</string>
    <string name="personal_center">个人中心</string>
    <string name="download_management">下载管理</string>
    <string name="software_settings">软件设置</string>
    <string name="feed_back">意见反馈</string>

    <!--个人中心-->
    <string name="login">登录</string>
    <string name="cancellation">注销</string>
    <string name="login_info">登录后您可以：\n★云备份收藏的漫画\n★多设备间同步阅读进度\n★截图分享到微博</string>
    <string name="personal_login">一键登录</string>
    <string name="personal_comment">我的评论</string>
    <string name="personal_sync">最后同步</string>
    <string name="personal_edit">编辑资料</string>
    <string name="personal_recharge">充值</string>

    <!--编辑个人资料-->
    <string name="edit_personal">编辑个人资料</string>
    <string name="edit_picture">头像</string>
    <string name="edit_nickname">昵称：</string>
    <string name="edit_sex">性别：</string>
    <string name="edit_from">来自：</string>
    <string name="edit_from_hint">输入你的位置...</string>
    <string name="edit_birthday">生日：</string>
    <string name="edit_sign">签名：</string>
    <string name="edit_collection">向大家展示我的收藏</string>
    <string name="edit_comment">向大家展示我的评论</string>
    <string name="edit_finish">完成</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--充值-->
    <string name="recharge">充值</string>
    <string name="recharge_phone">客服电话：4006008066</string>
    <string name="recharge_vip1">初级会员</string>
    <string name="recharge_vip2">萌动漫普通会员\n  （10元/月）</string>
    <string name="recharge_vip3">萌动漫高级会员\n  （20元/月）</string>
    <string name="recharge_vip2_prompt">尊敬的用户，您将购买“萌动漫普通会员”信息费10元/月（不含通信费），购买后即可每月可免费观看10本漫画。是否购买？取消不扣费</string>
    <string name="recharge_vip3_prompt">尊敬的用户，您将购买“萌动漫高级会员”信息费20元/月（不含通信费），购买后即可每月可免费观看所有漫画。是否购买？取消不扣费</string>
    <string name="recharge_unsubscribe">确定退订包月服务吗？（点击退订将发送一条退订短信）</string>

    <!--漫画详情-->
    <string name="details_add_collection">添加收藏</string>
    <string name="details_already_collection">已收藏</string>
    <string name="details_begin_watch">开始阅读</string>
    <string name="details_lz">连载(话)</string>
    <string name="details_dxb">单行本(卷)</string>
    <string name="details_fwp">番外篇</string>

    <!--收藏/历史-->
    <string name="collection">收藏</string>
    <string name="history">历史</string>
</resources>
