<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_edit_shape"
    >
<!--编辑个人资料-来自-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorFFA200">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择打开"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/dialog_close"
            android:layout_alignParentRight="true"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@mipmap/dialog_close"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/et_from"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/more_rl_background"
        android:gravity="center_vertical"
        android:maxLength="6"
        android:paddingLeft="10dp"
        android:hint="@string/edit_from_hint"
        android:text=""
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_edit_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/btn_edit_cancel"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>