<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">
    <!--漫画详情-->
    <include layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/details_cartoonPicture"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="酷哥"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_personal_collection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="作  者："
                            android:textColor="@color/gray_text"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_recovery"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="恢复"
                            android:textColor="@color/blue3"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/details_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="免费漫画"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/details_fightpower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="战斗力："
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/details_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="来源：互联网"
                        android:textColor="@color/gray_text"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/details_collection"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/personal_button"
                            android:text="@string/details_add_collection"
                            android:textColor="@color/color7D3138"
                            android:textSize="16sp" />
                        <!--@drawable/more_rl_background-->
                        <Button
                            android:id="@+id/details_continue"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:lines="1"
                            android:ellipsize="end"
                            android:background="@drawable/more_login_button"
                            android:text="@string/details_begin_watch"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp">
                <!--展开-->
                <ImageView
                    android:id="@+id/spread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/xia" />

                <!--收起-->
                <ImageView
                    android:id="@+id/shrink_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/shang"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_LZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_LZ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/details_lz"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/details_updatetime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="1dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="最后更新："
                        android:textColor="@color/gray_text" />
                </RelativeLayout>

                <com.recyclerviewpull.XpulltorefereshiRecyclerView
                    android:id="@+id/details_recyclerview_LZ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_DXB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/details_dxb"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.recyclerviewpull.XpulltorefereshiRecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/details_recyclerview_DXB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_FWP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/details_fwp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.recyclerviewpull.XpulltorefereshiRecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/details_recyclerview_FWP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>